--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
- "name": "activity",
- "version": "1.0.0",
- "description": "",
- "main": "index.js",
- "scripts": {
-  "start": "concurrently \"npm run server\" \"npm run client\"",
-  "server": "nodemon index.js",
-  "client": "npm start --prefix client"
+    "name": "activity",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+    "start": "node index.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
  },
  "author": "",
  "license": "ISC",
